--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             <td>Redd</td>
             <td>60</td>
           </tr>
+          <tr>
+          </tr>
+           <td>Lisa</td>
+           <td>Ibarra</td>
+           <td>91</td>
         </tbody>
       </table>
     </div>
